<resources>
    <string name="app_name">MDP Group 16</string>
    <string name="app_pref_key" translatable="false">MDP_PREF_KEY</string>
    <string name="app_pref_auto_update" translatable="false">AUTO_UPDATE</string>
    <string name="app_pref_send_arena" translatable="false">COMMAND_SEND_ARENA</string>
    <string name="app_pref_exploration" translatable="false">COMMAND_EXPLORATION</string>
    <string name="app_pref_fastest" translatable="false">COMMAND_FASTEST</string>
    <string name="app_pref_pause" translatable="false">COMMAND_PAUSE</string>
    <string name="app_pref_forward" translatable="false">COMMAND_FORWARD</string>
    <string name="app_pref_reverse" translatable="false">COMMAND_REVERSE</string>
    <string name="app_pref_turn_left" translatable="false">COMMAND_TURN_LEFT</string>
    <string name="app_pref_turn_right" translatable="false">COMMAND_TURN_RIGHT</string>
    <string name="app_pref_command_start_point" translatable="false">COMMAND_START_POINT</string>
    <string name="app_pref_command_goal_point" translatable="false">COMMAND_GOAL_POINT</string>
    <string name="app_pref_command_waypoint" translatable="false">COMMAND_WAYPOINT</string>
    <string name="app_pref_grid_identifier" translatable="false">IDENTIFIER_GRID</string>
    <string name="app_pref_descriptor_divider" translatable="false">DESCRIPTOR_DIVIDER</string>
    <string name="app_pref_set_image_identifier" translatable="false">IDENTIFIER_SET_IMAGE</string>
    <string name="app_pref_robot_position_identifier" translatable="false">IDENTIFIER_ROBOT_POSITION</string>
    <string name="app_pref_robot_status_identifier" translatable="false">IDENTIFIER_ROBOT_STATUS</string>
    <string name="app_pref_command_prefix" translatable="false">COMMAND_PREFIX</string>
    <string name="app_pref_command_divider" translatable="false">COMMAND_DIVIDER</string>
    <string name="app_pref_arduino_prefix" translatable="false">ARDUINO_PREFIX</string>
    <string name="app_pref_pc_prefix" translatable="false">PC_PREFIX</string>
    <string name="app_pref_label_f1" translatable="false">LABEL_F1</string>
    <string name="app_pref_command_f1" translatable="false">COMMAND_F1</string>
    <string name="app_pref_label_f2" translatable="false">LABEL_F2</string>
    <string name="app_pref_command_f2" translatable="false">COMMAND_f2</string>
    <string name="app_pref_dark_mode" translatable="false">DARK_MODE</string>
    <string name="app_pref_sad_mode" translatable="false">SAD_MODE</string>
    <string name="app_pref_using_amd" translatable="false">USING_AMD</string>
    <string name="app_pref_simulation_mode" translatable="false">SIMULATION_MODE</string>
    <string name="app_pref_map_descriptor_1" translatable="false">MAP_DESCRIPTOR_1</string>
    <string name="app_pref_simulation_speed" translatable="false">SIMULATION_SPEED</string>
    <string name="app_pref_simulation_coverage" translatable="false">SIMULATION_COVERAGE</string>
    <string name="app_pref_simulation_time" translatable="false">SIMULATION_TIME</string>
    <string name="app_pref_start_position" translatable="false">START_POSITION</string>
    <string name="app_pref_goal_position" translatable="false">GOAL_POSITION</string>
    <string name="app_pref_accelerometer" translatable="false">ACCELEROMETER_USE</string>
    <string name="app_pref_language" translatable="false">APP_LANGUAGE</string>
    <string name="app_result_map_name" translatable="false">MAP_NAME</string>
    <string name="app_result_map_id" translatable="false">MAP_ID</string>
    <string name="version_something">Version %s</string>
    <string name="ok">OK</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="none">None</string>
    <string name="x" translatable="false">×</string>
    <string name="language_default" translatable="false">en</string>
    <string name="error_bluetooth_not_supported">Bluetooth is not supported on this device.</string>
    <string name="error_bluetooth_not_connected">No bluetooth device connected.</string>
    <string name="error_bluetooth_off">Bluetooth-related features are disabled until Bluetooth is turned on.</string>
    <string name="exit_the_app">Exit the app?</string>
    <string name="not_available">This feature is currently not available.</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="arena">Arena</string>
    <string name="settings">Settings</string>
    <string name="pause">Pause</string>
    <string name="f1_default" translatable="false">F1</string>
    <string name="f2_default" translatable="false">F2</string>
    <string name="status">Status</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="mode">Mode</string>
    <string name="coordinates">Position</string>
    <string name="coordinates_default" translatable="false">1, 1</string>
    <string name="timer">Timer</string>
    <string name="timer_default" translatable="false">00:00</string>
    <string name="messages">Messages</string>
    <string name="clear">Clear</string>
    <string name="messages_send_hint">Say something…</string>
    <string name="clear_message_log">Clear message log?</string>
    <string name="clear_arena_timer">Completely clear the arena and timer?</string>
    <string name="chat_prefix" translatable="false">[%1$s] %2$s</string>
    <string name="prefix_robot">Recv:</string>
    <string name="prefix_tablet">Sent:</string>
    <string name="started_something">Started %s</string>
    <string name="timer_minute_second" translatable="false">%1$s:%2$s</string>
    <string name="ex" translatable="false">EX</string>
    <string name="fp" translatable="false">FP</string>
    <string name="exploration">Exploration</string>
    <string name="fastest">Fastest</string>
    <string name="mdf" translatable="false">MDF</string>
    <string name="fastest_path">Fastest Path</string>
    <string name="no_save_data">No save data found.</string>
    <string name="illegal_command">Illegal command.</string>
    <string name="hugging_wall">Hugging wall…</string>
    <string name="searching_unexplored">Searching for unexplored grids…</string>
    <string name="going_home">Going home!</string>
    <string name="set_waypoint">Please set a waypoint first.</string>
    <string name="accelerometer_on">Accelerometer ON.</string>
    <string name="accelerometer_off">Accelerometer OFF.</string>
    <string name="set_arena_as">Set the entire arena as?</string>
    <string name="explored">Explored</string>
    <string name="unexplored">Unknown</string>
    <string name="bluetooth_connection_successful">Bluetooth connection successful.</string>
    <string name="attempt_reconnection">Attempting to reconnect Bluetooth…</string>
    <string name="failed_reconnection">Bluetooth reconnection failed, tried 12 times.</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="connected_device">Connected Device</string>
    <string name="device_name">Device Name: %s</string>
    <string name="disconnect">Disconnect</string>
    <string name="enable_bluetooth_discovery">Allow device to be discovered</string>
    <string name="devices">Devices</string>
    <string name="bonded_devices">Paired Devices</string>
    <string name="other_devices">Other Devices</string>
    <string name="general">General</string>
    <string name="identifiers">Identifiers</string>
    <string name="customise">Customise</string>
    <string name="simulation">Simulation</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_warning">WARNING! App restarts immediately when toggled!</string>
    <string name="automatic_update">Automatically Update Arena</string>
    <string name="using_amd">Using AMDTool</string>
    <string name="language">Language</string>
    <string name="english" translatable="false">English</string>
    <string name="chinese" translatable="false">中文</string>
    <string name="selected">Selected</string>
    <string name="checklist_over">Checklist period is over.</string>
    <string name="general_config">General Configuration</string>
    <string name="string_divider">ID-Data Divider:</string>
    <string name="string_divider_default" translatable="false">:</string>
    <string name="command_prefix">Command Prefix:</string>
    <string name="command_prefix_default" translatable="false">#</string>
    <string name="arduino_prefix">Arduino Prefix:</string>
    <string name="arduino_prefix_default" translatable="false">A</string>
    <string name="pc_prefix">PC Prefix:</string>
    <string name="pc_prefix_default" translatable="false">P</string>
    <string name="send_command_identifiers">Send Command Identifiers</string>
    <string name="command">Command</string>
    <string name="command_to_send">Command To Send</string>
    <string name="information">Information To Receive</string>
    <string name="string_identifier">String Identifier</string>
    <string name="send_arena">Send Arena Info</string>
    <string name="send_arena_default" translatable="false">S</string>
    <string name="exploration_default" translatable="false">exs</string>
    <string name="fastest_path_default" translatable="false">beginFastest</string>
    <string name="pause_default" translatable="false">pause</string>
    <string name="forward">Forward</string>
    <string name="forward_default" translatable="false">M</string>
    <string name="reverse">Reverse</string>
    <string name="reverse_default" translatable="false">V</string>
    <string name="turn_left">Turn Left</string>
    <string name="turn_left_default" translatable="false">L</string>
    <string name="turn_right">Turn Right</string>
    <string name="turn_right_default" translatable="false">R</string>
    <string name="start_point">Start Point</string>
    <string name="start_point_default" translatable="false">startPoint</string>
    <string name="goal_point">Goal Point</string>
    <string name="goal_point_default" translatable="false">goalPoint</string>
    <string name="waypoint">Waypoint</string>
    <string name="waypoint_default" translatable="false">waypoint</string>
    <string name="restore_defaults">Restore Defaults</string>
    <string name="receive_information_identifiers">Receive Information Identifiers</string>
    <string name="grid_descriptor">Grid Descriptor</string>
    <string name="grid_descriptor_default" translatable="false">grid</string>
    <string name="descriptor_divider">Descriptor Divider:</string>
    <string name="descriptor_divider_default" translatable="false">/</string>
    <string name="set_image">Image Position</string>
    <string name="set_image_default" translatable="false">setImage</string>
    <string name="robot_position">Robot Position</string>
    <string name="robot_position_default" translatable="false">robotPosition</string>
    <string name="robot_status">Robot Status</string>
    <string name="robot_status_default" translatable="false">robotStatus</string>
    <string name="restore_command_defaults">Restore commands to their default values?</string>
    <string name="unsaved_changes">Unsaved changes. Save or discard?</string>
    <string name="save">Save</string>
    <string name="very_traumatising">This is very traumatising!</string>
    <string name="simulation_mode">Simulation Mode</string>
    <string name="simulation_speed">Simulation Speed</string>
    <string name="simulation_speed_placeholder_aps">%d Actions Per Second</string>
    <string name="simulation_coverage">Coverage Limit</string>
    <string name="simulation_coverage_description">Simulation terminates after exploring the set percentage of grids of the map.</string>
    <string name="simulation_coverage_placeholder">%d%% Coverage</string>
    <string name="save_map">Save Map</string>
    <string name="map_name">Map Name:</string>
    <string name="cancel">Cancel</string>
</resources>