<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/window_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/settings_padding"
    android:paddingLeft="@dimen/settings_padding"
    android:paddingRight="@dimen/settings_padding"
    android:paddingBottom="@dimen/settings_padding"
    tools:context="wjayteo.mdp.android.arena.MapSaveActivity">

    <com.google.android.material.textview.MaterialTextView
        style="@style/AppTextView.Title"
        android:id="@+id/titleLabel"
        android:text="@string/save_map"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        style="@style/AppTextView.Big"
        android:id="@+id/mapNameLabel2"
        android:text="@string/map_name"
        android:layout_marginTop="@dimen/settings_padding"
        app:layout_constraintTop_toBottomOf="@id/titleLabel"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        style="?attr/appEditText"
        android:layout_height="wrap_content"
        android:id="@+id/mapNameEditText"
        app:layout_constraintTop_toBottomOf="@id/mapNameLabel2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/clearButton"
        android:layout_marginTop="@dimen/element_padding"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        style="@style/FAB"
        android:id="@+id/clearButton"
        android:src="@drawable/ic_clear"
        app:fabCustomSize="32dp"
        app:maxImageSize="18dp"
        app:layout_constraintTop_toTopOf="@id/mapNameEditText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/mapNameEditText"/>

    <com.google.android.material.button.MaterialButton
        style="@style/UIButton.Dialog"
        android:id="@+id/saveButton"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/mapNameEditText"
        app:layout_constraintRight_toLeftOf="@id/cancelButton"/>

    <com.google.android.material.button.MaterialButton
        style="@style/UIButton.Dialog"
        android:id="@+id/cancelButton"
        android:text="@string/cancel"
        android:layout_marginEnd="0dp"
        app:layout_constraintTop_toBottomOf="@id/mapNameEditText"
        app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>