<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/window_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="wjayteo.mdp.android.settings.SettingsActivity">

    <com.google.android.material.textview.MaterialTextView
        style="@style/AppTextView.Gray.Settings.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/very_traumatising" />

    <androidx.cardview.widget.CardView
        style="@style/DataCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout style="@style/DataCardInnerLayout.Settings.Horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/AppTextView.Big"
                    android:text="@string/simulation_mode"/>
            </LinearLayout>

            <Switch
                android:id="@+id/simulationSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textview.MaterialTextView
        style="@style/AppTextView.Gray.Settings.Title"
        android:text="@string/simulation_speed" />

    <androidx.cardview.widget.CardView
        style="@style/DataCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout style="@style/DataCardInnerLayout"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iconSpeedSlow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/element_padding"
                    android:src="?attr/speedSlowIconSrc"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <SeekBar
                    android:id="@+id/simulationSpeedSeekBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/screen_padding"
                    android:layout_marginEnd="@dimen/screen_padding"
                    android:max="9"
                    app:layout_constraintLeft_toRightOf="@id/iconSpeedSlow"
                    app:layout_constraintRight_toLeftOf="@id/iconSpeedFast"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <ImageView
                    android:id="@+id/iconSpeedFast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/element_padding"
                    android:src="?attr/speedFastIconSrc"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textview.MaterialTextView
                style="@style/AppTextView.Gray"
                android:id="@+id/simulationSpeedLabel"
                android:layout_marginTop="@dimen/screen_padding"
                android:layout_gravity="center"
                android:text="@string/simulation_speed_placeholder_aps" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textview.MaterialTextView
        style="@style/AppTextView.Gray.Settings.Title"
        android:text="@string/simulation_coverage" />

    <androidx.cardview.widget.CardView
        style="@style/DataCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/screen_padding"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iconCoverageLess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/element_padding"
                    android:src="?attr/coverageLessIconSrc"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <SeekBar
                    android:id="@+id/coverageLimitSeekBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/screen_padding"
                    android:layout_marginEnd="@dimen/screen_padding"
                    android:max="100"
                    app:layout_constraintLeft_toRightOf="@id/iconCoverageLess"
                    app:layout_constraintRight_toLeftOf="@id/iconCoverageMore"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <ImageView
                    android:id="@+id/iconCoverageMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/element_padding"
                    android:src="?attr/coverageMoreIconSrc"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textview.MaterialTextView
                style="@style/AppTextView.Gray"
                android:id="@+id/coverageLimitLabel"
                android:layout_marginTop="@dimen/screen_padding"
                android:layout_gravity="center"
                android:text="@string/simulation_coverage_placeholder" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textview.MaterialTextView
        style="@style/AppTextView.Gray.Settings"
        android:text="@string/simulation_coverage_description" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/screen_padding"/>
</LinearLayout>
