<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/window_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="wjayteo.mdp.android.bluetooth.BluetoothActivity">

    <include layout="@layout/addon_toolbar" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/bluetoothSwipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/AppTextView.Gray.Settings.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connected_device"/>

                <androidx.cardview.widget.CardView
                    style="@style/DataCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/screen_padding">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/bluetoothNameLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintWidth_percent="0.6"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            android:text="@string/device_name"
                            android:textSize="@dimen/text_size_big"/>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/bluetoothDisconnectButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/disconnect"
                            android:textSize="@dimen/text_size_small"
                            android:onClick="clickDisconnect"
                            app:icon="@drawable/ic_disconnect"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/DataCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/settings_padding">

                    <LinearLayout style="@style/DataCardInnerLayout"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <com.google.android.material.textview.MaterialTextView
                                style="@style/AppTextView.Big"
                                android:text="@string/enable_bluetooth_discovery"/>

                            <com.google.android.material.textview.MaterialTextView
                                style="@style/AppTextView.Gray"
                                android:id="@+id/bluetoothMyNameLabel"
                                android:text="@string/device_name"/>
                        </LinearLayout>

                        <Switch
                            android:id="@+id/bluetoothDiscoverySwitch"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/AppTextView.Gray.Settings.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bonded_devices" />

                <androidx.cardview.widget.CardView
                    style="@style/DataCard"
                    android:id="@+id/bluetoothBondedCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/bluetoothBondedRecycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false"
                        android:overScrollMode="never"
                        tools:listitem="@layout/listitem_bluetooth"
                        tools:itemCount="2" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    style="@style/AppTextView.Gray.Settings.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/AppTextView.Gray.Title"
                        android:id="@+id/bluetoothOthersLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/devices" />

                    <ProgressBar
                        android:id="@+id/bluetoothProgressBar"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginStart="@dimen/element_padding"/>
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    style="@style/DataCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/bluetoothOthersRecycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false"
                        android:overScrollMode="never"
                        tools:listitem="@layout/listitem_bluetooth"
                        tools:itemCount="5" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>